fresh_start/security_groups.tf
resource "aws_security_group" "tolulopes_security_group" {
  name        = "allow_customized_sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = "vpc-062c8518bcd91aa46"

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_for_ssh_and_http"
  }
}
